--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -15,12 +20,58 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
+/* .arrow-right{ 
+  animation: move 3s ease-in-out infinite;
+} */
+.cta:hover .arrow-right{
+  animation: move 3s ease-in-out infinite;
+}
+
+.modal-img{
+  width: 100%;
+  max-height:520px;
+}
+
+@media screen and (max-width: 768px) {
+  .modal-img{
+    max-height: 350px;
   }
 }
+
+
+@keyframes move {
+  0% {
+     transform: translatex(0px);
+  }
+  50% {
+     transform: translatex(15px);
+  }
+  100% {
+     transform: translatex(0px);
+  }
+}
+
+
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+}
+
+@media screen and (min-width: 400px) {
+  .img-hero{
+    max-width: 25rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .img-hero{
+    max-width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .img-hero{
+    max-width: 38rem;
+  }
+}
+
